--- a/static/styles.css
+++ b/static/styles.css
@@ -30,4 +30,8 @@
     color: white;
     background-color: transparent;
     border-style: none;
+    font-size: large;
+    width: 30px;
+    padding: 10px;
+    margin: 1px;
 }
