--- a/static/styles.css
+++ b/static/styles.css
@@ -28,7 +28,13 @@
     font-size: large;
     border: none;
     cursor: pointer;
-    width: 30px;
+    width: 40px;
+    height: 40px;
     padding: 10px;
     margin: 1px;
+}
+
+.empty-menu {
+    display: flex;
+    flex-grow: 1;
 }
