--- a/static/styles.css
+++ b/static/styles.css
@@ -18,23 +18,23 @@
     background-color: black;
     display: flex;
     flex-direction: row;
-    text-align: center;
+    align-items: center;
 }
 
 .player-button {
     color: white;
     background-color: transparent;
     border-style: none;
-    font-size: large;
+    font-size: 20px;
     border: none;
     cursor: pointer;
-    width: 40px;
-    height: 40px;
-    padding: 10px;
+    width: 35px;
+    height: 35px;
     margin: 1px;
 }
 
 .empty-menu {
     display: flex;
     flex-grow: 1;
+    align-items: center;
 }
