--- a/static/styles.css
+++ b/static/styles.css
@@ -47,7 +47,7 @@
     font-size: 17px;
 }
 
-.empty-menu {
+.viewing-panel {
     display: flex;
     flex-grow: 1;
     font-family: 'Roboto', sans-serif;
@@ -62,4 +62,27 @@
 
 .video-duration {
     padding: 5px 2px 4px 1px;
+}
+
+.progress-bar {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.progress-slider {
+    margin: 4px 10px 5px;
+    height: 6px;
+    background-color: red;
+    border-radius: 30px;
+}
+
+.dot {
+    height: 8px;
+    width: 8px;
+    background-color: red;
+    border: solid white;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 2px 7px -1px -15px;
 }
