--- a/static/styles.css
+++ b/static/styles.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     width: 800px;
     height: 600px;
+    font-size: 16px;
 }
 
 .player-shadow {
@@ -56,6 +57,7 @@
     color: white;
     justify-content: space-between;
     flex-direction: row;
+    align-items: center;
 }
 
 .current-time {
@@ -86,7 +88,7 @@
     border: solid white;
     border-radius: 50%;
     display: inline-block;
-    margin: 2px 7px -1px -15px;
+    margin-left: -15px;
     opacity: 0;
     transition-timing-function: ease-out;
     transition: 600ms;
